--- a/Function Practice Exercises.ipynb
+++ b/Function Practice Exercises.ipynb
@@ -310,7 +310,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Original solution for ANIMAL CRACKERS\n",
+    "#solution for ANIMAL CRACKERS\n",
     "def animal_crackers(text):\n",
     "    wordlist = text.split()\n",
     "    return wordlist[0][0] == wordlist[1][0]"
@@ -980,6 +980,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Solution\n",
     "def almost_there(n):\n",
     "    return ((abs(100 - n) <= 10) or (abs(200 - n) <= 10))"
    ]
@@ -1480,6 +1481,399 @@
    ],
    "source": [
     "blackjack(5,6,7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#SUMMER OF '69: Return the sum of the numbers in the array, except ignore sections of numbers starting with a 6 and extending to the next 9 (every 6 will be followed by at least one 9). Return 0 for no numbers\n",
+    "\n",
+    "def summer_69(arr):\n",
+    "    #newarray = arr.split()\n",
+    "    arrsum = 0\n",
+    "    for i in arr:\n",
+    "        arrsum += i\n",
+    "        return arrsum\n",
+    "        \n",
+    "     \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summer_69([1, 3, 5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#SUMMER OF '69: Return the sum of the numbers in the array, except ignore sections of numbers starting with a 6 and extending to the next 9 (every 6 will be followed by at least one 9). Return 0 for no numbers\n",
+    "\n",
+    "def summer_69(arr):\n",
+    "    #newarray = arr.split()\n",
+    "    arrsum = 0\n",
+    "    for i in arr:\n",
+    "        arrsum += i\n",
+    "        return arrsum\n",
+    "    if [6,9] in arr and "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def summer_69(arr):\n",
+    "    total = 0\n",
+    "    add = True\n",
+    "    for num in arr:\n",
+    "        while add:\n",
+    "            if num != 6:\n",
+    "                total += num\n",
+    "                break\n",
+    "            else:\n",
+    "                add = False\n",
+    "        while not add:\n",
+    "            if num != 9:\n",
+    "                break\n",
+    "            else:\n",
+    "                add = True\n",
+    "                break\n",
+    "    return total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summer_69([1, 3, 5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summer_69([4, 5, 6, 7, 8, 9])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summer_69([2, 1, 6, 9, 11])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#SPY GAME: Write a function that takes in a list of integers and returns True if it contains 007 in order\n",
+    "\n",
+    "def spy_game(arr):\n",
+    "    for i in arr:\n",
+    "        if arr[i:i+3] == [0,0,7]:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spy_game([1,2,4,0,0,7,5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def spy_game(nums):\n",
+    "\n",
+    "    code = [0,0,7,'x']\n",
+    "    \n",
+    "    for num in nums:\n",
+    "        if num == code[0]:\n",
+    "            code.pop(0)   # code.remove(num) also works\n",
+    "       \n",
+    "    return len(code) == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spy_game([1,2,4,0,0,7,5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spy_game([1,0,2,4,0,5,7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spy_game([1,7,2,0,4,5,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#COUNT PRIMES: Write a function that returns the number of prime numbers that exist up to and including a given number\n",
+    "\n",
+    "def count_primes(num):\n",
+    "    arr = list(range(2,num))\n",
+    "    count = 0\n",
+    "    for i in arr:\n",
+    "        if i%2 !=0 and i%3 !=0 and i%4 !=0 and i%6 !=0 and i%4 !=0:\n",
+    "            count += i\n",
+    "            return count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_primes(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_primes(num):\n",
+    "    primes = [2]\n",
+    "    x = 3\n",
+    "    if num < 2:  # for the case of num = 0 or 1\n",
+    "        return 0\n",
+    "    while x <= num:\n",
+    "        for y in range(3,x,2):  # test all odd factors up to x-1\n",
+    "            if x%y == 0:\n",
+    "                x += 2\n",
+    "                break\n",
+    "        else:\n",
+    "            primes.append(x)\n",
+    "            x += 2\n",
+    "    print(primes)\n",
+    "    return len(primes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 7]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_primes(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_primes2(num):\n",
+    "    primes = [2]\n",
+    "    x = 3\n",
+    "    if num < 2:\n",
+    "        return 0\n",
+    "    while x <= num:\n",
+    "        for y in primes:  # use the primes list!\n",
+    "            if x%y == 0:\n",
+    "                x += 2\n",
+    "                break\n",
+    "        else:\n",
+    "            primes.append(x)\n",
+    "            x += 2\n",
+    "    print(primes)\n",
+    "    return len(primes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 7]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_primes(10)"
    ]
   },
   {
