--- a/Functions and Methods Homework .ipynb
+++ b/Functions and Methods Homework .ipynb
@@ -335,6 +335,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A  Python function to check whether a string is pangram or not.\n",
+    "\n",
+    "    Note : Pangrams are words or sentences containing every letter of the alphabet at least once.\n",
+    "    For example : \"The quick brown fox jumps over the lazy dog\"\n",
+    "\n",
+    "Hint: Look at the string module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import string\n",
+    "\n",
+    "def ispangram(str1, alphabet=string.ascii_lowercase):\n",
+    "        alphaset = set(alphabet)  \n",
+    "        return set(str1.lower()) >= alphaset\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ispangram(\"The quick brown fox jumps over the lazy dog\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
