Milestone Project - 1 Testing

--- a/Milestone Project 1.ipynb
+++ b/Milestone Project 1.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -108,51 +108,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 2: Write a function that can take in a player input and assign their marker as 'X' or 'O'. Think about using while loops to continually ask until you get a correct answer.\n",
+    "#Corretion\n",
     "\n",
-    "def player_in():\n",
+    "def player_input():\n",
     "    marker = ''\n",
-    "    while marker != 'O' and marker != 'X':\n",
-    "        marker = input(print('Player 1, choose marker, X or O'))\n",
-    "        player1 = marker\n",
-    "        if marker == 'X':\n",
-    "            player2 = 'O'\n",
-    "        else:\n",
-    "            player2 = 'X'\n",
-    "    return (player1, player2)\n",
+    "    \n",
+    "    while not (marker == 'X' or marker == 'O'):\n",
+    "        marker = input('Player 1: Do you want to be X or O? ').upper()\n",
+    "\n",
+    "    if marker == 'X':\n",
+    "        return ('X', 'O')\n",
+    "    else:\n",
+    "        return ('O', 'X')\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Player 1, choose marker, X or O\n",
-      "NoneX\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "('X', 'O')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "player_in()"
+    "player_input()"
    ]
   },
   {
@@ -179,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,21 +182,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "X|$|\n",
-      "O||X\n",
-      "X|O|O\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "place_marker(board,'',9)\n",
+    "\n",
+    "board = ['#','X','O','X','O','X','O','X','O','X']\n",
+    "place_marker(board,'X',9)\n",
     "display_board(board)"
    ]
   },
@@ -237,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,34 +221,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Correction \n",
-    "def win_check(board, mark):\n",
-    "    return (board[1] == board[2] == board[3] == mark) or  (board[4] == board[5] == board[6]  == mark) or (board[7] == board[8] == board[9]  == mark) or (board[1] == board[4] == board[7]  == mark) or (board[2] == board[5] == board[8]  == mark) or (board[3] == board[6] == board[9]  == mark) or (board[3] == board[5] == board[7]  == mark) or (board[1] == board[5] == board[9]  == mark)\n",
-    "    "
+    "def win_check(board,mark):\n",
+    "    \n",
+    "    return ((board[7] == mark and board[8] == mark and board[9] == mark) or # across the top\n",
+    "    (board[4] == mark and board[5] == mark and board[6] == mark) or # across the middle\n",
+    "    (board[1] == mark and board[2] == mark and board[3] == mark) or # across the bottom\n",
+    "    (board[7] == mark and board[4] == mark and board[1] == mark) or # down the middle\n",
+    "    (board[8] == mark and board[5] == mark and board[2] == mark) or # down the middle\n",
+    "    (board[9] == mark and board[6] == mark and board[3] == mark) or # down the right side\n",
+    "    (board[7] == mark and board[5] == mark and board[3] == mark) or # diagonal\n",
+    "    (board[9] == mark and board[5] == mark and board[1] == mark)) # diagonal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 121,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "win_check(board,'X')"
+    "win_check(board,'O')"
    ]
   },
   {
@@ -300,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,16 +286,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Player 2'"
+       "'Player 1'"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,16 +323,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,16 +389,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X|$|\n",
-      "O||X\n",
-      "X|O|O\n"
+      "X|O|\n",
+      "O|X|O\n",
+      "X|O|X\n"
      ]
     }
    ],
@@ -480,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,23 +508,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Do you want to play again? Enter Yes or No: y\n"
+      "Do you want to play again? Enter Yes or No: M\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,13 +551,93 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " | | \n",
+      " | | \n",
+      " | | \n",
+      "Choose your next position: (1-9) 1\n",
+      "Choose your next position: (1-9) 2\n",
+      "Choose your next position: (1-9) 5\n",
+      "Choose your next position: (1-9) 8\n",
+      "Choose your next position: (1-9) 5\n",
+      "Choose your next position: (1-9) 8\n",
+      "Choose your next position: (1-9) 3\n",
+      "Choose your next position: (1-9) 4\n",
+      "Choose your next position: (1-9) 6\n",
+      "Choose your next position: (1-9) 7\n",
+      "Choose your next position: (1-9) 9\n",
+      "Choose your next position: (1-9) 5\n",
+      "Choose your next position: (1-9) 9\n",
+      "Choose your next position: (1-9) 6\n",
+      "Choose your next position: (1-9) 8\n"
+     ]
+    }
+   ],
    "source": [
     "print('Welcome to Tic Tac Toe!')\n",
     "\n",
-    "display_board(board)\n",
-    "player_input()\n"
+    "\n",
+    "#### SET\n",
+    "while True:\n",
+    "    board = [' '] * 10\n",
+    "    player1_maker, player2_marker = player_input()\n",
+    "    turn = choose_first()\n",
+    "    print(turn + ' will go first.')  \n",
+    "\n",
+    "#### PLAY\n",
+    "    play_game = input('Are you ready? Enter yes or no')\n",
+    "    if play_game.lower()[0] == 'y':\n",
+    "        game_on = True\n",
+    "    else:\n",
+    "        game_on = False\n",
+    "    \n",
+    "    while game_on:\n",
+    "        if turn == 'Player 1':\n",
+    "            #### PLAYER 1\n",
+    "            display_board(board)\n",
+    "            position = player_choice(board)\n",
+    "            place_marker(board, mark, position)\n",
+    "            #### CHECK WIN\n",
+    "            if win_check(board, mark):\n",
+    "                print('Player 1 wins')\n",
+    "                game_on = False\n",
+    "            else:\n",
+    "                if full_board_check(board):\n",
+    "                    display_board(board)\n",
+    "                    print('The game is a draw!')\n",
+    "                    break\n",
+    "                else:\n",
+    "                    turn = 'Player 2'\n",
+    "        else:\n",
+    "            #### PLAYER 2\n",
+    "            display_board(board)\n",
+    "            position = player_choice(board)\n",
+    "            place_marker(board, mark, position)\n",
+    "            #### CHECK WIN\n",
+    "            if win_check(board, mark):\n",
+    "                print('Player 2 wins')\n",
+    "                game_on = False\n",
+    "            else:\n",
+    "                if full_board_check(board):\n",
+    "                    display_board(board)\n",
+    "                    print('The game is a draw!')\n",
+    "                    break\n",
+    "                else:\n",
+    "                    turn = 'Player 1'\n",
+    "    if not replay():\n",
+    "        break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
