--- a/Milestone Project 1.ipynb
+++ b/Milestone Project 1.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -72,9 +72,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "'return' outside function (<ipython-input-3-4a81e6762d77>, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-3-4a81e6762d77>\"\u001b[1;36m, line \u001b[1;32m10\u001b[0m\n\u001b[1;33m    return (player1_marker, player2_marker)\u001b[0m\n\u001b[1;37m                                           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m 'return' outside function\n"
+     ]
+    }
+   ],
    "source": [
     "def player_input():\n",
     "    player1_marker = '' \n",
@@ -92,23 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "player_input()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,9 +122,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Player 1: Do you want to be X or O? x\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('X', 'O')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "player_input()"
    ]
@@ -145,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,19 +164,18 @@
     "    board = ['#','X','O','X','O','X','O','X','O','X']\n",
     "    while marker != 'O' and marker != 'X':\n",
     "        marker = input(print('Player 1, choose marker, X or O'))\n",
-    "    position = int(input(print(\"Choose your position (1-9)\")))\n",
+    "    position = int(input(pxrint(\"Choose your position (1-9)\")))\n",
     "    board[position] = marker\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 3: Write a function that takes in the board list object, a marker ('X' or 'O'), and a desired position (number 1-9) and assigns it to the board.\n",
-    "\n",
+    "# Correction\n",
     "def place_marker(board, marker, position):\n",
     "    board[position] = marker\n",
     "    "
@@ -173,21 +183,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "board = ['#','X','O','X','O','X','O','X','O','X']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X|O|X\n",
+      "O|X|O\n",
+      "X|O|O\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
-    "board = ['#','X','O','X','O','X','O','X','O','X']\n",
+    "board = ['#','X','O','O','O','X','O','X','O','X']\n",
     "place_marker(board,'X',9)\n",
     "display_board(board)"
    ]
@@ -221,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,11 +251,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "win_check(board,'O')"
+    "win_check(board,'X')"
    ]
   },
   {
@@ -269,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +317,7 @@
        "'Player 1'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,16 +345,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,51 +402,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "full_board_check(board)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X|O|\n",
+      "X|O|X\n",
       "O|X|O\n",
-      "X|O|X\n"
+      "X|O|O\n"
      ]
     }
    ],
    "source": [
     "display_board(board)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'i' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-102-397d543883c5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mi\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'i' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "i"
    ]
   },
   {
@@ -449,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,21 +513,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Do you want to play again? Enter Yes or No: M\n"
+      "Do you want to play again? Enter Yes or No: n\n"
      ]
     },
     {
@@ -524,7 +529,7 @@
        "False"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,13 +549,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -560,20 +558,8 @@
       " | | \n",
       " | | \n",
       "Choose your next position: (1-9) 1\n",
-      "Choose your next position: (1-9) 2\n",
-      "Choose your next position: (1-9) 5\n",
-      "Choose your next position: (1-9) 8\n",
-      "Choose your next position: (1-9) 5\n",
-      "Choose your next position: (1-9) 8\n",
-      "Choose your next position: (1-9) 3\n",
-      "Choose your next position: (1-9) 4\n",
-      "Choose your next position: (1-9) 6\n",
-      "Choose your next position: (1-9) 7\n",
-      "Choose your next position: (1-9) 9\n",
-      "Choose your next position: (1-9) 5\n",
-      "Choose your next position: (1-9) 9\n",
-      "Choose your next position: (1-9) 6\n",
-      "Choose your next position: (1-9) 8\n"
+      "Choose your next position: (1-9) 1\n",
+      "Choose your next position: (1-9) 2\n"
      ]
     }
    ],
@@ -583,7 +569,7 @@
     "\n",
     "#### SET\n",
     "while True:\n",
-    "    board = [' '] * 10\n",
+    "    theboard = [' '] * 10\n",
     "    player1_maker, player2_marker = player_input()\n",
     "    turn = choose_first()\n",
     "    print(turn + ' will go first.')  \n",
@@ -598,32 +584,34 @@
     "    while game_on:\n",
     "        if turn == 'Player 1':\n",
     "            #### PLAYER 1\n",
-    "            display_board(board)\n",
-    "            position = player_choice(board)\n",
-    "            place_marker(board, mark, position)\n",
+    "            display_board(theboard)\n",
+    "            position = player_choice(theboard)\n",
+    "            place_marker(theboard, player1_maker, position)\n",
     "            #### CHECK WIN\n",
-    "            if win_check(board, mark):\n",
+    "            if win_check(theboard, player1_maker):\n",
+    "                display_board(theBoard)\n",
     "                print('Player 1 wins')\n",
     "                game_on = False\n",
     "            else:\n",
-    "                if full_board_check(board):\n",
-    "                    display_board(board)\n",
+    "                if full_theboard_check(theboard):\n",
+    "                    display_board(theboard)\n",
     "                    print('The game is a draw!')\n",
     "                    break\n",
     "                else:\n",
     "                    turn = 'Player 2'\n",
     "        else:\n",
     "            #### PLAYER 2\n",
-    "            display_board(board)\n",
-    "            position = player_choice(board)\n",
-    "            place_marker(board, mark, position)\n",
+    "            display_board(theboard)\n",
+    "            position = player_choice(theboard)\n",
+    "            place_marker(theboard, player2_maker, position)\n",
     "            #### CHECK WIN\n",
-    "            if win_check(board, mark):\n",
+    "            if win_check(theboard, player2_maker):\n",
+    "                display_board(theBoard)\n",
     "                print('Player 2 wins')\n",
     "                game_on = False\n",
     "            else:\n",
-    "                if full_board_check(board):\n",
-    "                    display_board(board)\n",
+    "                if full_theboard_check(theboard):\n",
+    "                    display_board(theboard)\n",
     "                    print('The game is a draw!')\n",
     "                    break\n",
     "                else:\n",
